# lager_qt6_standalone

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  main.qml
src/lib/: CMakeLists.txt  qmodel.hpp
src/snake/: CMakeLists.txt
src/snake/lib/: CMakeLists.txt
src/todo/: CMakeLists.txt  main.cpp  main.qml
src/todo/lib/: CMakeLists.txt
